[package]
name = "dutlib"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11.9"
errno = "0.3.14"
expectrl = "0.8.0"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
# This does save nearly half a meg but it increases the incremental build time
# too much (and we don't really need the half meg)
#lto = "fat"
opt-level = "s"
strip = true
